<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.timerapp.ui.setTimer.SetTimerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_margin"
        tools:context=".ui.setTimer.SetTimerFragment">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:background="@color/white"
            android:onClick="@{() -> viewModel.navigateToPresetTimer()}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_timer_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/timer_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_btn"
            tools:layout_editor_absoluteY="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_presetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.currentTimerName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <NumberPicker
            android:id="@+id/numberPicker1"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/setting_margin"
            android:textSize="100sp"
            android:value="@={viewModel.min1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_timer_name"
            app:maxValue="@{9}"
            app:minValue="@{0}" />

        <NumberPicker
            android:id="@+id/numberPicker2"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/setting_margin"
            android:layout_marginBottom="2dp"
            android:value="@={viewModel.min2}"
            app:layout_constraintBottom_toBottomOf="@+id/numberPicker1"
            app:layout_constraintStart_toEndOf="@+id/numberPicker1"
            app:layout_constraintTop_toBottomOf="@+id/et_timer_name"
            app:layout_constraintVertical_bias="0.0"
            app:maxValue="@{9}"
            app:minValue="@{0}" />

        <NumberPicker
            android:id="@+id/numberPicker3"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="32dp"
            android:value="@={viewModel.min3}"
            app:layout_constraintBottom_toBottomOf="@+id/numberPicker2"
            app:layout_constraintStart_toEndOf="@+id/numberPicker2"
            app:layout_constraintTop_toBottomOf="@+id/et_timer_name"
            app:maxValue="@{9}"
            app:minValue="@{0}" />

        <TextView
            android:id="@+id/min_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/numberPicker3"
            app:layout_constraintTop_toBottomOf="@+id/numberPicker3" />

        <NumberPicker
            android:id="@+id/numberPicker4"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/setting_margin"
            android:value="@={viewModel.sec1}"
            app:layout_constraintEnd_toStartOf="@+id/numberPicker5"
            app:layout_constraintTop_toBottomOf="@+id/et_timer_name"
            app:maxValue="@{9}"
            app:minValue="@{0}" />

        <NumberPicker
            android:id="@+id/numberPicker5"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/setting_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:value="@={viewModel.sec2}"
            app:layout_constraintBottom_toBottomOf="@+id/numberPicker4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_timer_name"
            app:layout_constraintVertical_bias="0.0"
            app:maxValue="@{9}"
            app:minValue="@{0}" />

        <TextView
            android:id="@+id/sec_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sec"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/numberPicker5"
            app:layout_constraintTop_toBottomOf="@+id/numberPicker5" />

        <Button
            android:id="@+id/pre_notification"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_margin"
            android:onClick="@{() -> viewModel.showDialog()}"
            android:text="@string/setting_preset"
            app:icon="@drawable/ic_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/min_unit" />

        <TextView
            android:id="@+id/setting_preset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pre_notification"
            app:notificationTime="@{viewModel.currentNotificationTime}"
            tools:text="5分前に通知する" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/setting_margin"
            android:layout_marginTop="@dimen/setting_margin"
            android:onClick="@{() -> viewModel.savePresetTimer()}"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/pre_notification"
            app:layout_constraintTop_toBottomOf="@+id/sec_unit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>