...
        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_margin"
            android:text="@string/setting_preset"
            app:layout_constraintStart_toStartOf="@+id/numberPickerMin"
            app:layout_constraintTop_toTopOf="parent" />

        <NumberPicker
            android:id="@+id/numberPickerMin"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintEnd_toStartOf="@+id/numberPickerSec"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/min_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_title"
            app:maxValue="@{999}"
...
