<resources>
    <string name="app_name">試験勉強用タイマー</string>
    <string name="delete">削除</string>
    <string name="cancel">キャンセル</string>
    <string name="save">保存</string>
    <string name="caution">タイマーの設定を行って下さい。</string>
    <string name="ok">OK</string>
    <string name="timer_setting">タイマーの終了を通知画面に表示する</string>
    <string name="initial_use">ご利用頂きありがとうございます。\n「+」ボタンを押してタイマーを作成しましょう。</string>
    <string name="initial_set_preset">「+」ボタンを押してタイマーの設定を行いましょう。</string>
    <string name="timer_name">タイマーの名前</string>
    <string name="preset_timer_name">プリセットタイマーの名前</string>
    <string name="total_time_title">全体の残り時間</string>
    <string name="min">分</string>
    <string name="sec">秒</string>
    <string name="setting_title">設定</string>
    <string name="setting_sound">サウンド</string>
    <string name="setting_preset">事前通知設定</string>
    <string name="alarm">アラーム</string>
    <string name="vibration">バイブレーション</string>
    <string name="preset_timer_detail">プリセットタイマーの詳細</string>
    <string name="content_description_delete">リストの削除</string>
    <string name="timer_stop_message">タイマーを終了しますか。</string>
    <string name="setting_update">タイマー名と設定の変更を反映する</string>
    <string name="initial_min">000</string>
    <string name="initial_sec">00</string>
    <string name="set_min">%0$03d</string>
    <string name="set_sec">%0$02d</string>
    <string name="detail_menu">詳細</string>
    <string name="rule_and_policy">利用規約・プライバシーポリシー</string>
    <string name="finish_message">タイマーが終了しました。</string>
    <string name="notification_channel">タイマー通知</string>
    <string name="notification_channel_name">タイマー終了</string>
    <string name="rule_and_policy_message">詳細内容を表示しますか。</string>
</resources>